trunk/Archive2/c5/1f6412ebaf858a/output
In file included from /usr/local/include/c++/4.9.0/thread:35:0,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/c++0x_warning.h:32:2: error: #error This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
 #error This file requires compiler and library support for the \
  ^
main.cpp: In function 'int main()':
main.cpp:7:10: warning: 'auto' changes meaning in C++11; please remove it [-Wc++0x-compat]
     for (auto ch : "THANKS FOR PLAYING ")
          ^
main.cpp:7:15: error: 'ch' does not name a type
     for (auto ch : "THANKS FOR PLAYING ")
               ^
main.cpp:12:5: error: expected ';' before 'std'
     std::cout << "\n\n\n";
     ^
main.cpp:13:1: error: expected primary-expression before '}' token
 }
 ^
main.cpp:13:1: error: expected ')' before '}' token
main.cpp:13:1: error: expected primary-expression before '}' token
